--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://www.bitcoin.com'" />
+<meta http-equiv="Refresh" content="0; url='https://snort.social/p/npub1lju8z6x6cu8sntp4e7az0efvpln5xhdp6dw3tjklh9qpwrpthhhs803vc6'" />
